# feedgen

./: .dockerignore  .gitignore  DEVELOPMENT_LOG.md  Dockerfile  README.md  compose.yml  config.example.yaml  pyproject.toml  spec.md  task.md
.serena/: project.yml
.serena/memories/: code_structure.md  code_style.md  project_overview.md  suggested_commands.md  task_completion.md
docs/: instagram_setup.md  youtube-api-setup.md
feedgen/: __init__.py
feedgen/api/: __init__.py  main.py
feedgen/cli/: __init__.py  config.py  main.py  webapi.py
feedgen/core/: __init__.py  cache.py  config.py  exceptions.py  feed_detector.py  generator.py  google_news_decoder.py  instagram_client.py  models.py  parser.py  url_generator.py  url_normalizers.py  youtube_client.py
tests/: __init__.py
tests/test_api/: __init__.py  test_main.py
tests/test_cli/: test_config.py  test_feed_options.py  test_main.py  test_url_generation.py
tests/test_core/: __init__.py  test_cache.py  test_exceptions.py  test_feed_detector.py  test_generator.py  test_google_news_decoder.py  test_instagram_client.py  test_parser.py  test_url_generator.py  test_url_normalizers.py  test_youtube_client.py
